[package]
name = "iicpc-lockdown"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI Parsing
clap = { version = "4.4", features = ["derive"] }
# System & Process Management
nix = { version = "0.27", features = ["process", "sched", "mount", "user", "net", "fs"] }
sysinfo = "0.30"
users = "0.11"
# Async Runtime
tokio = { version = "1", features = ["full"] }
# Error Handling & Logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# Serialization (for logs/config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
colored = "2"
dns-lookup = "2.0"
hostname = "0.3"
uuid = { version = "1.19.0", features = ["v4"] }
ctrlc = "3"
libc = "0.2"
active-win-pos-rs = "0.9"
phf = { version = "0.11", features = ["macros"] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
strip = true     # Strip symbols
panic = "abort"  # Crash immediately on panic (cleaner for judges)
